@@ -63,27 +63,27 @@
     <dependency>
       <groupId>ca.phon</groupId>
       <artifactId>phon-app</artifactId>
-      <version>2.2.0-SNAPSHOT</version>
+      <version>3.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>ca.hedlund</groupId>
       <artifactId>jiss-core</artifactId>
-      <version>0.5</version>
+      <version>0.6</version>
     </dependency>
     <dependency>
       <groupId>ca.hedlund</groupId>
       <artifactId>jiss-blocks</artifactId>
-      <version>0.5</version>
+      <version>0.6</version>
     </dependency>
     <dependency>
       <groupId>ca.hedlund</groupId>
       <artifactId>jiss-history</artifactId>
-      <version>0.5</version>
+      <version>0.6</version>
     </dependency>
     <dependency>
       <groupId>ca.hedlund</groupId>
       <artifactId>jiss-rsyntaxarea-input</artifactId>
-      <version>0.5</version>
+      <version>0.6</version>
     </dependency>
     
     <dependency>
@@ -132,11 +132,25 @@
 		<plugin>
 		  <groupId>org.apache.maven.plugins</groupId>
 		  <artifactId>maven-compiler-plugin</artifactId>
-		  <version>3.1</version>
+		  <version>3.7.0</version>
 		  <configuration>
-		    <source>1.8</source>
-		    <target>1.8</target>
+		    <source>9</source>
+		    <target>9</target>
+		    <compilerArgs>
+				<arg>--add-modules</arg>
+				<arg>java.xml.bind</arg>
+			</compilerArgs>
 		  </configuration>
+		</plugin>
+		
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<configuration>
+				<reuseForks>false</reuseForks>
+				<forkCount>1</forkCount>
+				<argLine>--add-modules java.xml.bind</argLine>
+			</configuration>
 		</plugin>
 		
 		<plugin>
@@ -163,27 +177,35 @@
 			</configuration>
 		</plugin>
       
-     	<!-- Generate source for xml schema -->
-		<plugin>
-			<groupId>org.jvnet.jaxb2.maven2</groupId>
-			<artifactId>maven-jaxb2-plugin</artifactId>
-			<version>0.12.3</version>
-			<executions>
-				<execution>
-					<id>generate</id>
-					<goals>
-						<goal>generate</goal>
-					</goals>
-					<configuration>
-						<schemaDirectory>src/main/resources/xml/xsd</schemaDirectory>
-						<bindingDirectory>src/main/resources/xml/xjb</bindingDirectory>
-						<specVersion>2.0</specVersion>
-						<extension>true</extension>
-					</configuration>
-				</execution>
-			</executions>
-		</plugin>
+     	<plugin>
+				<groupId>org.apache.cxf</groupId>
+				<artifactId>cxf-xjc-plugin</artifactId>
+				<configuration>
+					<extensions>
+						<extension>org.apache.cxf.xjcplugins:cxf-xjc-dv:2.3.0</extension>
+					</extensions>
+				</configuration>
+				<executions>
+					<execution>
+						<id>generate-sources</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>xsdtojava</goal>
+						</goals>
+						<configuration>
+							<sourceRoot>${basedir}/target/generated-sources/xjc</sourceRoot>
+							<xsdOptions>
+								<xsdOption>
+									<xsd>${basedir}/src/main/resources/xml/xsd/scriptlib.xsd</xsd>
+									<packagename>ca.phon.shell.scriptlibrary</packagename>
+									<bindingFile>${basedir}/src/main/resources/xml/xjb/scriptlib.xjb</bindingFile>
+								</xsdOption>
+							</xsdOptions>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
     </plugins>
   </build>
-  <version>13</version>
+  <version>14</version>
 </project>
